src/tests/data/TypeErrors/AssignIntToString.c

#include <stdio.h>

int main()
{
	char* a = 1;    // ERROR
	return 0;
}